chore: spell-check the repo (#19)

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -27,6 +27,11 @@ jobs:
       - run: npm ci
       - run: npm run lint
       - run: npm run format:check
+      # While spell check runs in lint, here we run it as a separate step to
+      # make it easier to see the results and treat violations as errors
+      # instead of warnings.
+      - name: Spell Check
+        run: npx cspell "**" --no-progress --show-suggestions --show-context
 
   unitTests:
     name: Unit Tests
@@ -38,7 +43,7 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
       - run: npm ci
-      - run: npm run test:unittests
+      - run: npm run test:unit
 
   vsCodeTests:
     name: VS Code Integration Tests
