--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "format": "prettier . --write",
     "format:check": "prettier . --check",
     "pretest": "npm run compile && npm run lint",
-    "test:unittests": "npm run compile && mocha --enable-source-maps --require ./out/test/unit-test-setup.js './out/**/*.unit.test.js'",
+    "test:unit": "npm run compile && mocha --enable-source-maps --require ./out/test/unit-test-setup.js './out/**/*.unit.test.js'",
     "test:xvfb": "xvfb-run -s '-screen 0 1024x768x24' node ./out/test/integration-test-runner.js",
     "test": "node ./out/test/integration-test-runner.js",
     "vscode:prepublish": "npm run compile",
@@ -53,6 +53,7 @@
     "watch": "tsc -watch -p ./"
   },
   "devDependencies": {
+    "@cspell/eslint-plugin": "^8.17.3",
     "@eslint/js": "^9.15.0",
     "@types/chai": "^4.3.20",
     "@types/chai-as-promised": "^7.1.8",
@@ -66,6 +67,7 @@
     "@vscode/test-electron": "^2.4.1",
     "chai": "^4.5.0",
     "chai-as-promised": "^7.1.2",
+    "cspell": "^8.17.3",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
