ci: support running build/test adhoc (#79)

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -4,6 +4,7 @@ name: Build and Test
 
 on:
   workflow_call:
+  workflow_dispatch:
 
 env:
   # See supported Node.js release schedule at https://nodejs.org/en/about/releases
