docs: centralize contributing prereqs and document test setup (#190)

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,6 @@
   "recommendations": [
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
-    "ms-vscode.extension-test-runner"
+    "ms-toolsai.jupyter"
   ]
 }
